# Datathon

./: .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  run.py  wsgi.py
app/: settings.py
docker/: entrypoint.sh
scripts/: export_data.py  generate_embeddings.py  import_data.py
src/: __init__.py  extensions.py  routes.py
src/services/: Data.py  chromadb_info.py  gemini_api.py  import_data.py  load_data.py  log.py  retrieve_data.py
src/static/css/: style.css
src/static/js/: script.js
src/templates/: index.html
