[project]
name = "datathon"
version = "0.1.0"
description = ""
authors = [
    {name = "valteci"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
