[project]
name = "datathon"
version = "0.1.0"
description = ""
authors = [
    {name = "valteci"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "google-genai (>=1.39.1,<2.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "chromadb (>=1.1.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
